# QSM-ML

./: .gitignore  README.md  setup.cfg
Main/: experiments.ipynb  layers.py  models.py  shapes.py  training.py
Replication/: create_QSM.py  create_simulated_image.py  test_simulation.py
Replication/utils/: def_volume.py  image_handling.py  kernels.py  phase_map.py
archive/: .gitignore  README.md  setup.py
archive/Main/: models.py  training.py
archive/Main/tests/: experiments.ipynb  tensorflow_experiments.ipynb  test_NDI.ipynb  test_NDI.py  test_dipole.py
archive/Replication/: create_QSM.py  create_QSM_NDI.py
archive/Replication/utils/: NDI.py  image_handling.py  kernels.py
archive/libraries/ML/: layers.py  models.py
archive/scripts/: training.py
data_cleaning/: clean_data.py
evaluation/: variable_step.ipynb
notes/: checking_model_components.ipynb  notebook.ipynb  variable step training.md
src/QSMData/: GenerateImage.py  Susceptibility.py  __init__.py  utils.py
src/QSMLearn/: __init__.py  createData.py  layers.py  models.py  shapes.py  tfrecords.py  training.py
tests/: test_affine.py
training/: config.json  create_training_data.py  single_step_size.py  train_with_tfrecords.py  variable_step_size.py
training/logs2/20230816-212426/: checkpoint.data-00000-of-00001  checkpoint.index
training/logs2/20230817-152324/: checkpoint.data-00000-of-00001  checkpoint.index
training/trained_models/: best_model.data-00000-of-00001  best_model.index  best_var_NDI.data-00000-of-00001  best_var_NDI.index  checkpoint
(+10 files in other folders)
