[metadata]
name = QSMLearn
version = 0.1.0
author = Oscar Goldman
description = Learning the optimal parameters for QSM using TensorFlow
long_description = file: README.md

[options]
package_dir = 
	=src
packages = QSMLearn
install_requires = 
	tensorflow
	numpy
	matplotlib

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
	trainQSM:trainQSM