[metadata]
name = QSMLearn
version = 0.1.0
author = Oscar Goldman
description = Learning the optimal parameters for QSM using TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = 
	= src
packages = find:
install_requires = 
	tensorflow
	numpy
	scipy
	matplotlib

[options.packages.find]
where = src
